classDiagram
    namespace Model {
        class Game {
            setupGame()
            endGame()
        }

        class Logic {
            initGame()
            nextMove()
        }

        class Player {
            move()
        }
    }

    Logic o-- Game
    Logic "2..*" o-- Player
    <<interface>> Game
    <<interface>> Player
    <<interface>> Logic


    class Controller {
        start()
    }
    <<interface>> Controller


    class View
    <<interface>> View

    Controller o-- Logic
    View --o Controller
